# Shared 模块构建文件

# 收集所有头文件
filegroup(
    name = "all_headers",
    srcs = glob([
        "**/*.h",
        "**/*.hpp",
    ], allow_empty = True),
    visibility = ["//visibility:public"],
)

# 收集所有源文件
filegroup(
    name = "all_sources",
    srcs = glob([
        "**/*.cpp",
        "**/*.cc",
        "**/*.cxx",
    ], allow_empty = True),
    visibility = ["//visibility:public"],
)

# 收集所有文件
filegroup(
    name = "all_files",
    srcs = [
        ":all_headers",
        ":all_sources",
    ],
    visibility = ["//visibility:public"],
)
