cc_library(
    name = "common",
    srcs = [
        "Logger.cpp",
        "LogCategories.cpp",
        "TCMallocWrapper.cpp",
        "StructuredLogger.cpp",
        "CommandLineParser.cpp",
        "ResourceMonitor.cpp",
    ],
    hdrs = [
        "Logger.h",
        "LogCategory.h",
        "LogCategories.h",
        "Types.h",
        "TCMallocWrapper.h",
        "StructuredLogger.h",
        "CommandLineParser.h",
        "ResourceMonitor.h",
    ],
    strip_include_prefix = ".",
    include_prefix = "Common",
    deps = [
        "//:helianthus_config",
        "@spdlog//:spdlog",
    ],
    copts = select({
        "@bazel_tools//src/conditions:windows": [
            "/std:c++20",
            "/utf-8",
            "/W4",
            "/DHELIANTHUS_ENABLE_LOGGING=1",
        ],
        "//conditions:default": [
            "-std=c++20",
            "-Wall",
            "-Wextra",
            "-DHELIANTHUS_ENABLE_LOGGING=1",
        ],
    }),

    visibility = ["//visibility:public"],
)