load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

cc_library(
    name = "config",
    srcs = [
        "JsonConfigProvider.cpp",
        "ConfigManager.cpp",
    ],
    hdrs = [
        "IConfigProvider.h",
        "JsonConfigProvider.h", 
        "ConfigManager.h",
    ],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Common:common",
        "@nlohmann_json//:json",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "config_types",
    hdrs = [
        "IConfigProvider.h",
    ],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    visibility = ["//visibility:public"],
)
