load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

cc_library(
    name = "config",
    srcs = [
        "ConfigManager.cpp",
    ],
    hdrs = [
        "ConfigManager.h",
    ],
    deps = [
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "config_types",
    hdrs = [
        "IConfigProvider.h",
    ],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    visibility = ["//visibility:public"],
)
